--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4">
-      <skid></skid>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-         <skid></skid>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <skid></skid> 
-      </div>
+    <skid class="col-sm-12 col-md-6 col-lg-3" *ngFor="let skid of skids"></skid>
+   <!--  <skid class="col-sm-12 col-md-6 col-lg-4"></skid>
+    <skid class="col-sm-12 col-md-6 col-lg-4"></skid> -->
   </div>
 </div>
+
 <router-outlet></router-outlet>
