--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="container">
   <div class="row">
-    <skid class="col-sm-12 col-md-6 col-lg-3" *ngFor="let skid of skids"></skid>
-   <!--  <skid class="col-sm-12 col-md-6 col-lg-4"></skid>
-    <skid class="col-sm-12 col-md-6 col-lg-4"></skid> -->
+    <div class="col-sm-12 col-md-6 col-lg-3" *ngFor="let skidItem of skids$ | async; let i = index">
+      <skid  
+        [skid]="skidItem"  
+        (skidChanged)="updateSkids($event, i)" 
+      >
+      </skid>
+    </div>
   </div>
 </div>
-
 <router-outlet></router-outlet>
