--- a/src/app/skid/skid.component.css
+++ b/src/app/skid/skid.component.css
@@ -11,12 +11,18 @@
     background-color: #b3d7ff;  /* light blue */
     color: rgb(34, 34, 34);  /* adjust text color as needed */
   }
-.btn {
-    border: none;
+th {
+    width: 100px;
 }
-.full-width {
+td {
+    height: 50px;
+}
+td button {
     width: 100%;
-}
+    height: 100%;
+    border: none;
+  }
+
 .label-column {
     width: 100px;  /* adjust as needed */
     flex: none;    /* prevents the column from growing or shrinking */
