added a custom-made numberpad for form input

--- a/src/app/skid/skid.component.css
+++ b/src/app/skid/skid.component.css
@@ -5,14 +5,18 @@
     border-radius: 5px;
     box-shadow: 2px 2px 2px #ccc;
     background-color: #f8f8f8;
-    width: 18rem;
+    width: 20rem;
 }
 .card-title {
     background-color: #b3d7ff;  /* light blue */
     color: rgb(34, 34, 34);  /* adjust text color as needed */
+    padding: 0.5rem;
+    
   }
 th {
     width: 100px;
+    color: #222222;
+    font-weight:normal;
 }
 td {
     height: 50px;
@@ -26,5 +30,12 @@ td button {
 .label-column {
     width: 100px;  /* adjust as needed */
     flex: none;    /* prevents the column from growing or shrinking */
-    color:rgb(34, 34, 34)
+    color: #222222;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
